use quay to host public image

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,4 +10,7 @@ jobs:
       - name: check out
         uses: actions/checkout@v2
       - name: build
+        env:
+          QUAY_USERNAME: ${{ secrets.QUAY_USERNAME }}
+          QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
         run: bash -x ./build.sh
