move build script to github actions

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,24 @@ jobs:
       - name: check out
         uses: actions/checkout@v2
       - name: build
+        shell: bash
         env:
           QUAY_USERNAME: ${{ secrets.QUAY_USERNAME }}
           QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
-        run: bash -x ./build.sh
+        run: |
+          TAG=v1.18.9-eks-1-18-1.1
+          mkdir build/
+          cd build/
+          git clone https://github.com/k0sproject/k0s
+          cd k0s
+          git checkout -b build v0.8.1
+
+          git apply ../../patches/001_dockerfile.patch
+          git apply ../../patches/002_embedded-bins_Makefile.patch
+          git apply ../../patches/003_pkg_constant.patch
+
+          make EMBEDDED_BINS_BUILDMODE=fetch
+          docker login quay.io -u $QUERY_USERNAME -p $QUERY_PASSWORD
+          docker build -t quay.io/chanwit/ekz:$TAG .
+          docker push quay.io/chanwit/ekz:$TAG
+          docker logout
