--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,10 @@ jobs:
         uses: actions/checkout@v2
       - name: install stgit
         shell: bash
-        run: sudo apt-get install -y stgit
+        run: |
+          sudo apt-get install -y stgit
+          git config --global user.name "Chanwit Kaewkasi"
+          git config --global user.email "chanwit@gmail.com"
       - name: build
         shell: bash
         env:
