--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,11 +22,13 @@ jobs:
           QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
         run: |
           TAG=$(cat VERSION)
+          K0S_VERSION=$(cat K0S_VERSION)
+
           mkdir build/
           cd build/
           git clone https://github.com/k0sproject/k0s
           cd k0s
-          git checkout -b build v0.8.1
+          git checkout -b build $K0S_VERSION
           stg init
           stg import -s ../../patches/series
 
