add security scanner

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,23 @@ jobs:
           stg import -s ../../patches/series
 
           make EMBEDDED_BINS_BUILDMODE=fetch
-          docker login quay.io -u $QUAY_USERNAME -p $QUAY_PASSWORD
           docker build -t quay.io/chanwit/ekz:$TAG .
+      - name: security scan
+        shell: bash
+        run: |
+          TAG=$(cat VERSION)
+
+          wget https://github.com/anchore/grype/releases/download/v0.6.1/grype_0.6.1_linux_amd64.deb
+          sudo apt install -y ./grype_0.6.1_linux_amd64.deb
+          grype -f negligible quay.io/chanwit/ekz:$TAG
+      - name: push
+        shell: bash
+        env:
+          QUAY_USERNAME: ${{ secrets.QUAY_USERNAME }}
+          QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
+        run: |
+          TAG=$(cat VERSION)
+
+          docker login quay.io -u $QUAY_USERNAME -p $QUAY_PASSWORD
           docker push quay.io/chanwit/ekz:$TAG
           docker logout quay.io
