--- a/.github/workflows/build-ekz-image.yaml
+++ b/.github/workflows/build-ekz-image.yaml
@@ -22,7 +22,6 @@ jobs:
           QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
         run: |
           cd images/ekz
-
           TAG=$(cat VERSION)
           K0S_VERSION=$(cat K0S_VERSION)
 
@@ -39,6 +38,7 @@ jobs:
       - name: security scan
         shell: bash
         run: |
+          cd images/ekz
           TAG=$(cat VERSION)
 
           wget https://github.com/anchore/grype/releases/download/v0.6.1/grype_0.6.1_linux_amd64.deb
@@ -50,6 +50,7 @@ jobs:
           QUAY_USERNAME: ${{ secrets.QUAY_USERNAME }}
           QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
         run: |
+          cd images/ekz
           TAG=$(cat VERSION)
 
           docker login quay.io -u $QUAY_USERNAME -p $QUAY_PASSWORD
