update push.paths for the workflow triggers

--- a/.github/workflows/build-ekz-image.yaml
+++ b/.github/workflows/build-ekz-image.yaml
@@ -4,6 +4,7 @@ on:
     branches:
       - 'main'
     paths:
+      - '.github/workflows/build-ekz-image.yaml'
       - 'images/ekz/**'
 jobs:
   build:
