--- a/images/kind/Dockerfile
+++ b/images/kind/Dockerfile
@@ -3,11 +3,11 @@ ARG K8S_VERSION=v1.19.6
 ARG EKSD_CHANNEL=1-19
 ARG EKSD_NUMBER=3
 ARG EKSD_VERSION=${K8S_VERSION}-eks-${EKSD_CHANNEL}-${EKSD_NUMBER}
-ARG BASE_URL=https://distro.eks.amazonaws.com/kubernetes-${EKSD_CHANNEL}/releases/${EKSD_NUMBER}/artifacts/kubernetes/${K8S_VERSION}/bin/linux/amd64
+ARG EKSD_BASE_URL=https://distro.eks.amazonaws.com/kubernetes-${EKSD_CHANNEL}/releases/${EKSD_NUMBER}/artifacts/kubernetes/${K8S_VERSION}/bin/linux/amd64
 
 FROM $BASE_IMAGE
 
-RUN echo "Add: ${BASE_URL}/kubectl"
+RUN echo "Add: ${EKSD_BASE_URL}/kubectl"
 ADD $BASE_URL/kubectl /usr/bin/kubectl
 ADD $BASE_URL/kubeadm /usr/bin/kubeadm
 ADD $BASE_URL/kubelet /usr/bin/kubelet
