correct k9s version in the build flow

--- a/.github/workflows/build-ui-image.yaml
+++ b/.github/workflows/build-ui-image.yaml
@@ -22,6 +22,7 @@ jobs:
         shell: bash
         run: |
           cd ui
+          K9S_VERSION=$(cat K9S_VERSION)
 
           pushd .
           mkdir build/
