--- a/.github/workflows/build-ekz-image.yaml
+++ b/.github/workflows/build-ekz-image.yaml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - name: check out
         uses: actions/checkout@v2
+      - name: setup go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16.2'
       - name: install stgit
         shell: bash
         run: |
