--- a/.github/workflows/build-ekz-image.yaml
+++ b/.github/workflows/build-ekz-image.yaml
@@ -57,7 +57,28 @@ jobs:
           cd k0s
           git checkout -b build $K0S_VERSION
           stg init
-          stg import -s ../../patches/series
+          stg import -s ../../patches-1-19/series
+
+          make EMBEDDED_BINS_BUILDMODE=fetch
+          docker build -t quay.io/ekz-io/ekz:$TAG .
+
+          popd
+          rm -rf build/
+      - name: build 1.20
+        shell: bash
+        run: |
+          cd images/ekz
+          TAG=$(cat VERSION_1_20)
+          K0S_VERSION=$(cat K0S_VERSION)
+          pushd .
+
+          mkdir build/
+          cd build/
+          git clone https://github.com/k0sproject/k0s
+          cd k0s
+          git checkout -b build $K0S_VERSION
+          stg init
+          stg import -s ../../patches-1-20/series
 
           make EMBEDDED_BINS_BUILDMODE=fetch
           docker build -t quay.io/ekz-io/ekz:$TAG .
@@ -74,6 +95,7 @@ jobs:
 
           grype -f negligible quay.io/ekz-io/ekz:$(cat VERSION_1_18)
           grype -f negligible quay.io/ekz-io/ekz:$(cat VERSION_1_19)
+          grype -f negligible quay.io/ekz-io/ekz:$(cat VERSION_1_20)
       - name: push
         shell: bash
         env:
@@ -86,5 +108,6 @@ jobs:
 
           docker push quay.io/ekz-io/ekz:$(cat VERSION_1_18)
           docker push quay.io/ekz-io/ekz:$(cat VERSION_1_19)
+          docker push quay.io/ekz-io/ekz:$(cat VERSION_1_20)
 
           docker logout quay.io
